# Orchids-Challenge

./: README.md
backend/: .gitignore  cloned_site.html  hello.py  pyproject.toml
backend/app/: .env.example  llm_workflow_updated.py  main.py
frontend/: package-lock.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: CloneForm.tsx  FeatureCards.tsx  Header.tsx  PreviewPanel.tsx  WebsiteCloner.tsx
frontend/src/services/: cloneService.ts  scraperService.ts
frontend/src/types/: index.ts
