[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browserbase>=1.4.0",
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.15",
    "langchain-openai>=0.3.19",
]
